syntax = "proto3";

package eigenlayer.hourglass.v1.common;

option go_package = "github.com/Layr-Labs/hourglass-monorepo/ponos/gen/protos/eigenlayer/hourglass/v1/common";

// AuthSignature contains authentication data for request verification
message AuthSignature {
  string challenge_token = 1;
  bytes signature = 2;  // signature of Hash(challenge_token + method + request_payload)
}